Wed Sep 13 18:02:38 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* includetest.o now compiled with LIBXML_CFLAGS

Wed Sep 13 17:52:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzDbTables now implemented (as maps) and pass testsuite.

Wed Sep 13 17:34:03 BST 2000 Olly Betts

	* test programs can now take a list of tests to on the command line.

Wed Sep 13 15:34:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* OmBatchEnquire::query_desc now initialised its elements to values
	  which will avoid random segfaults in unwary user code.

Wed Sep 13 15:33:35 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Some changes to Python (and general SWIG) bindings to support 
	  new OmDatabase and OmSettings.  There's a bug in there somewhere
	  though.

Wed Sep 13 15:23:26 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added the native part of the OmSettings Java wrappers.  (Oops!)

Wed Sep 13 15:13:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmPostListIterator::get_description() doesn't dump core when
	  internal is 0.

Wed Sep 13 14:42:03 BST 2000 Olly Betts

	* Updated TODO.

	* Fettled localmatch.cc in preparation for major rework.

Wed Sep 13 14:28:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fix reversed test bug in OmIndexer::set_node_config()

Wed Sep 13 13:14:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add lots of tests of the QuartzDbTables.  Currently these fail due
	  to a missing implementation.  In the short term they'll be pointing
	  at a map, but will prove useful when Martin's stuff replaces that.

Wed Sep 13 12:31:25 BST 2000 Olly Betts

	* OmRefCnt* -> RefCnt*; omrefcnt.h -> refcnt.h; OmSettingsData ->
	  SettingsData.

Wed Sep 13 11:28:18 BST 2000 Olly Betts

	* Use libtool's -export-symbols-regex switch to cut down on junk
	  symbols in library.  Doesn't really work as we'd hope as we get to
	  play with the mangled symbols.